--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,3 +34,13 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
+Imports: 
+    countrycode,
+    dplyr,
+    fs,
+    jsonlite,
+    readr,
+    rlang,
+    stringr,
+    tidyr,
+    writexl
