--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(choose_dictionary_language)
 importFrom(countrycode,countrycode)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,across)
+importFrom(dplyr,all_of)
 importFrom(dplyr,any_of)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_rows)
